# projects-time-extractor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IDEAS.md  README.md  TODO.md  WEB.md  backfill_ods.py  bump.py  claude-journal.md  cli.py  config.py  config.yml  config.yml-dist  deploy.sh  docker-compose.yml  extract_superprod.py  history_2_merges.py  plot_pomofocus.py  projects-config.yml  projects-config.yml-dist  pyproject.toml  suivi_chantier.py  swimlane.py  timer_csv_backup.sh  webhook_log_to_csv.py  webhook_receiver.py
.claude/plans/: backlog.md
.github/workflows/: deploy.yml
DATA/: pomofocus.csv  super_productivity.json  web_productivity.json
core/: data.py  plots.py  services.py  suivi_chantier.py
nginx/: nginx.conf
specs/: backfill-ods-archive-cae.md  backfill-ods-webhook-csv.md  chart-weeks.md  compteur-euros.md  edition-lignes-csv.md  months-pagination.md  page-mois.md  swimlane-endpoint.md  tache-en-cours-hachuree-view.md  week-graphs.md
tests/: test_backfill_ods.py  test_tools.py  test_webhook_log_to_csv.py  test_webhook_receiver.py
web/main/: routes.py
web/tools/: data_cache.py  histories.py  plots.py
