[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "time-tracking"
version = "0.6.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "flask",
    "scipy",
    "python-dateutil",
    "PyYAML",
    "pyarrow",
    "fastparquet",
]

[tool.setuptools.packages.find]
include = ["core*", "web*"]

[tool.setuptools]
py-modules = ["cli", "config"]

[project.scripts]
timer = "cli:main"
